Melhorada no Fusion/Merge

--- a/gradle.properties
+++ b/gradle.properties
@@ -54,6 +54,6 @@ mod_version=1.0.0
 # See https://maven.apache.org/guides/mini/guide-naming-conventions.html
 mod_group_id=com.fatec.farmmod
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
-mod_authors=Arabe1, Arabe2, Gordo, Japa1 e Japa2
+mod_authors=Enzo Fukushima, Lucas Melo, Lucas Athie, Mahmoud Ghazal, Samuel Bazone e Sergio Massaharu.
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=To sentido que vai dar merda, mas infelizmente vou afundar com essa merda.
+mod_description=Simulação do Farm Merge Valley.
